verif/test/deca/context/invalid/invalid-keyword-verif.res
src/test/deca/context/invalid/invalid-keyword.deca:8:4: The type 'intr' is not defined in the environment of types
